[package]
name = "stickup"
version = "0.2.0"
authors = ["Belegrade Studio <belegrade@belegrades.gg>"]
edition = "2021"
description = "A modular input device abstraction layer with HID and virtual device support."
license-file = "LICENSE"
readme = "README.md"
repository = "https://gitlab.com/belegrades/stickup-rs"
keywords = ["input", "game-dev", "hid", "virtual", "bindings"]
categories = ["game-development", "hardware-support", "gui", "visualization"]

[dependencies]
hidapi = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[features]
default = ["hid", "virtual"]
hid = []
virtual = []
