[package]
publish = false
name = "stickup"
version = "0.3.0"
authors = ["Belegrade Studio <belegrade@belegrades.gg>"]
edition = "2021"
description = "A modular input device abstraction layer with HID and virtual device support."
license-file = "LICENSE"
readme = "README.md"
repository = "https://gitlab.com/belegrades/stickup-WIP"
keywords = ["input", "game-dev", "hid", "virtual", "bindings"]
categories = ["game-development", "hardware-support", "gui", "visualization"]

[dependencies]
hidapi = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Storage_FileSystem",
  "Win32_Security",
] }

[features]
default = ["hid", "virtual"]
hid = []
virtual = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]